--- a/index.html
+++ b/index.html
@@ -3,24 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
   <title>Foto e Incontri</title>
-
-  <script>
-    const isMobile = /Mobi|Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-    if (!isMobile) {
-      window.location.href = "https://www.google.com";
-    }
-  </script>
-
-  <script>
-    document.addEventListener('keydown', function(e) {
-      if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && ['I', 'J', 'C'].includes(e.key)) || (e.ctrlKey && e.key === 'U')) {
-        e.preventDefault();
-      }
-    });
-    document.addEventListener('contextmenu', e => e.preventDefault());
-  </script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -29,12 +12,12 @@
   <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
 
   <style>
+    /* estilos sin cambios */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     html, body {
       height: 100%;
       font-family: 'Poppins', sans-serif;
@@ -43,7 +26,6 @@
       overflow-x: hidden;
       position: relative;
     }
-
     .wrap {
       position: relative;
       z-index: 1;
@@ -55,25 +37,21 @@
       padding: 20px;
       text-align: center;
     }
-
     .logo {
       position: absolute;
       top: 15%;
       z-index: 2;
     }
-
     .logo img {
       max-width: 250px;
       margin-bottom: 35px;
       filter: drop-shadow(0 0 10px #fff);
     }
-
     .question-title {
       font-size: 1.8rem;
       margin: 30px 0;
       text-shadow: 1px 1px 3px #000;
     }
-
     .buttons-block {
       display: flex;
       flex-direction: column;
@@ -82,7 +60,6 @@
       max-width: 380px;
       z-index: 2;
     }
-
     .step-btn {
       padding: 20px 28px;
       background: linear-gradient(45deg, #1E90FF, #4682B4);
@@ -98,21 +75,17 @@
       align-items: center;
       justify-content: center;
     }
-
     .step-btn:hover {
       transform: scale(1.07);
       box-shadow: 0 8px 24px rgba(30, 144, 255, 0.7);
     }
-
     .step-btn span {
       margin-left: 10px;
     }
-
     a.step-btn {
       text-decoration: none;
       display: block;
     }
-
     .image-container {
       position: relative;
       width: 100%;
@@ -120,7 +93,6 @@
       max-width: 100%;
       overflow: hidden;
     }
-
     .image-container img {
       position: absolute;
       top: 0;
@@ -131,21 +103,17 @@
       opacity: 0;
       transition: opacity 1s ease-in-out;
     }
-
     .image-container img.active {
       opacity: 1;
     }
-
     @media (max-width: 480px) {
       .question-title {
         font-size: 1.4rem;
       }
-
       .step-btn {
         font-size: 1.05rem;
         padding: 18px 24px;
       }
-
       .buttons-block {
         max-width: 100%;
       }
